FIxing an overlap bug

--- a/src/app/input.scss
+++ b/src/app/input.scss
@@ -4,6 +4,7 @@
     {
         margin : 0px;
         padding : 0px;
+        padding-right: 35px;
     }
 
     .input-md 
